--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "statics:copy": "rm -rf assets && mkdir assets && cp node_modules/@mozaic-ds/web-fonts/*.{woff,woff2} assets"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +20,9 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "@mozaic-ds/mozaic-web-components": "0.0.2-beta.3",
+    "@mozaic-ds/styles": "^1.16.0",
+    "@mozaic-ds/web-fonts": "^1.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
